--- a/src/scss/add-list.scss
+++ b/src/scss/add-list.scss
@@ -1,10 +1,145 @@
-body{
-  h1 {
-    color: blue;
-    display: flex;
+/*PEN STYLES*/
 
+$white: #fff;
+$purple: green;
+$success: #0A8754;
+$lightSuccess: #82E682;
+$error: #FF5C5C;
+$grey: #ccc;
+$opacBlack: rgba(0, 0, 0, 0.3);
+
+@mixin transition($dur, $prop: all, $style: ease) {
+  transition: $prop $dur $style;
+}
+
+.contactForm {
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin: auto;
+  max-width: 450px;
+  overflow: hidden;
+
+  .formHeader {
+    background: $purple;
+    border-bottom: 4px solid ($purple / 1.2);
+    color: $white;
+    text-align: center;
+    overflow: hidden;
+
+    /*TRANSITION*/
+    @include transition(0.5s);
+
+    h1 {
+      line-height: 1em;
+    }
   }
-  h2 {
-    color: red;
+
+  .formBody {
+    background: $white;
+    height: 371px;
+    padding: 20px 12px;
+    overflow: hidden;
+
+    /*TRANSITION*/
+    @include transition(0.2s);
+  }
+
+  .inputContainer {
+    border-radius: 3px;
+    position: relative;
+    margin-bottom: 5px;
+    overflow: hidden;
+    background: transparent;
+
+    .message {
+      color: $error;
+      background: $error * 2;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 0;
+      margin: 0;
+      line-height: 2.5em;
+      text-align: center;
+      overflow: hidden;
+
+      /*TRANSITION*/
+      @include transition(0.1s);
+    }
+
+    input,
+    textarea {
+      box-sizing: border-box;
+      padding: 10px;
+      font-size: 14px;
+      line-height: 1em;
+      border: none;
+      font: inherit;
+      border: 1px solid $grey;
+      outline: none;
+
+    }
+
+    label {
+      display: inline-block;
+      font-size: .7em;
+      background: $grey * 1.1;
+      color: $opacBlack;
+      line-height: 1.75em;
+      border-right: 1px solid $grey;
+
+      /*POSITION*/
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+    }
+
+    textarea,
+    input {
+      width: 100%;
+      max-width: 100%;
+    }
+  }
+
+  .submitBtn {
+    background: $purple;
+    color: $white;
+    border: none;
+    border-radius: 3px;
+    font: inherit;
+    padding: 10px 18px;
+    margin-top: 10px;
+    float: right;
+    width: auto;
+
+    /*TRANSITION*/
+    @include transition(0.5s, background);
+
+    &:hover {
+      background: $purple * 1.4;
+    }
+  }
+
+  input.success {
+    border-color: $lightSuccess / 1.1;
+
+    input,
+    textarea {
+      color: $success;
+    }
+  }
+
+  input.error {
+    border-color: $error / 1.1;
+
+    .message {
+      width: 100%;
+    }
+
+    input,
+    textarea {
+      color: $error;
+    }
   }
 }
